--- a/pom.xml
+++ b/pom.xml
@@ -273,5 +273,12 @@
       </plugin>
 
     </plugins>
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
   </build>
 </project>
