remove apply fixes

--- a/.github/workflows/qodana-cloud.yaml
+++ b/.github/workflows/qodana-cloud.yaml
@@ -27,5 +27,5 @@ jobs:
             post-pr-comment: "false"
             pr-mode: "false"
             push-fixes: pull-request
-            args: "--apply-fixes"
+            # args: "--apply-fixes"
 
