--- a/.github/workflows/qodana-cloud.yaml
+++ b/.github/workflows/qodana-cloud.yaml
@@ -26,6 +26,6 @@ jobs:
         with:
             post-pr-comment: "false"
             pr-mode: "false"
-            push-fixes: pull-request
+            # push-fixes: pull-request
             # args: "--apply-fixes"
 
