--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,6 +1,7 @@
 profile:
   name: qodana.recommended
 version: "1.0"
+linter: jetbrains/qodana-jvm:2023.2.6
 groups:
   - groupId: IncludedPaths
     groups:
