--- a/.github/workflows/qodana-cloud.yaml
+++ b/.github/workflows/qodana-cloud.yaml
@@ -30,6 +30,6 @@ jobs:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
         with:
           pr-mode: false
-          args: --apply-fixes
+          args: --cleanup, -l, jetbrains/qodana-jvm:2023.2
           push-fixes: pull-request
 
