--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,12 @@
           </classpathDependencyExcludes>
         </configuration>
       </plugin>
-
     </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
   </build>
 </project>
