--- a/qodana.yaml
+++ b/qodana.yaml
@@ -10,7 +10,7 @@ groups:
     inspections:
       - "!IncludedPaths"
       - Annotator # substituted by JavaAnnotator in sanity
-      - JavaAnnotator # works in "sanity" inspections
+      # - JavaAnnotator # works in "sanity" inspections
       - SyntaxError # should work on sanity level
       - Since15 # Detects wrong language level. Should work on sanity.
       - JavadocBlankLines # Questionable. Spam on mockito, RxJava and other projects.
