--- a/.github/workflows/qodana-cloud.yaml
+++ b/.github/workflows/qodana-cloud.yaml
@@ -13,7 +13,7 @@ on:
 permissions:
   contents: read
 jobs:
-  qodana:
+  Qodana-Cloud-Scan:
     runs-on: ubuntu-latest
     permissions:
       contents: write
