chore: enable lockfile automerge

--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,8 @@
             "patch",
             "pin",
             "digest",
-            "pinDigest"
+            "pinDigest",
+            "lockFileMaintenance"
          ],
          "automerge":true
       }
