Mockito dies on 22, wait until ASM and projects catch up to Java 22

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
     name: Tests with Java ${{ matrix.java }} on ${{ matrix.os }}
     strategy:
       matrix:
-        java: [11, 17, 21, 22-ea]
+        java: [11, 17, 21]
         os: [ubuntu-latest]
     steps:
       - name: Checkout
