chore: Switch to oracle JDK 21 in CI until nixpkgs catches up (#5468)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,9 @@ env:
     -Dmaven.resolver.transport=native
     -Daether.connector.connectTimeout=300000
     -Daether.connector.requestTimeout=300000
+  NIX_OPTIONS: >-
+    --ignore-environment
+    --keep MAVEN_OPTS --keep PATH --keep LANG
 
 jobs:
   test-linux:
@@ -28,7 +31,7 @@ jobs:
     name: Tests with Java ${{ matrix.java }} on ${{ matrix.os }}
     strategy:
       matrix:
-        java: [11, 17, 20, 21-ea]
+        java: [11, 17, 21]
         os: [ubuntu-latest]
     steps:
       - name: Checkout
@@ -39,9 +42,9 @@ jobs:
         uses: ./.github/actions/setup-tests
 
       - name: Time nix setup
-        run: nix develop .#jdk${{ matrix.java }} --command true
+        run: nix develop .#jdk${{ matrix.java }} ${{ env.NIX_OPTIONS }} --command true
       - name: Test
-        run: nix develop .#jdk${{ matrix.java }} --command test
+        run: nix develop .#jdk${{ matrix.java }} ${{ env.NIX_OPTIONS }} --command test
 
   test-windows:
     runs-on: windows-latest
@@ -77,9 +80,9 @@ jobs:
         uses: ./.github/actions/setup-tests
 
       - name: Time nix setup
-        run: nix develop --command true
+        run: nix develop ${{ env.NIX_OPTIONS }} --command true
       - name: Run tests with coverage
-        run: nix develop --command coverage
+        run: nix develop ${{ env.NIX_OPTIONS }} --keep PR_NUMBER --keep GITHUB_TOKEN --command coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.number }}
@@ -96,14 +99,14 @@ jobs:
         uses: ./.github/actions/setup-tests
 
       - name: Time nix setup
-        run: nix develop .#extraChecks --command true
+        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command true
       - name: Run extra checks
-        run: nix develop .#extraChecks --command extra
+        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command extra
       - name: Trigger extra remote tasks
         if: github.repository == 'INRIA/spoon' && github.event_name == 'pull_request'
-        run: nix develop .#extraChecks --command extra-remote
+        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command extra-remote
       - name: Run Javadoc quality check
-        run: nix develop .#extraChecks --command javadoc-quality
+        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command javadoc-quality
 
   reproducible-builds:
     runs-on: ubuntu-latest
@@ -117,9 +120,9 @@ jobs:
         uses: ./.github/actions/setup-tests
 
       - name: Time nix setup
-        run: nix develop --command true
+        run: nix develop ${{ env.NIX_OPTIONS }} --command true
       - name: Check status
-        run: nix develop --command reproducible-builds
+        run: nix develop ${{ env.NIX_OPTIONS }} --command reproducible-builds
 
   maven-central-requirements:
     runs-on: ubuntu-latest
@@ -132,6 +135,6 @@ jobs:
         uses: ./.github/actions/setup-tests
 
       - name: Time nix setup
-        run: nix develop --command true
+        run: nix develop ${{ env.NIX_OPTIONS }} --command true
       - name: Check maven pom quality
-        run: nix develop --command maven-pom-quality
+        run: nix develop ${{ env.NIX_OPTIONS }} --command maven-pom-quality
