--- a/spoon-dataflow/build.gradle
+++ b/spoon-dataflow/build.gradle
@@ -23,7 +23,7 @@ repositories {
 dependencies {
     implementation group: 'fr.inria.gforge.spoon', name: 'spoon-core', version: '+'
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.5.0'
-    implementation group: 'com.microsoft', name: 'z3', version: '4.8.4'
+    implementation group: 'tools.aqua', name: 'z3-turnkey', version: '4.11.2'
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
 }
 
