--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,35 @@
           </classpathDependencyExcludes>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.41.1</version>
+        <configuration>
+          <formats>
+            <format>
+              <includes>
+                <include>src/test/java/spoon/testing/assertions/**/*.java</include>
+              </includes>
+              <trimTrailingWhitespace/>
+              <endWithNewline/>
+              <indent>
+                <tabs>true</tabs>
+                <spacesPerTab>4</spacesPerTab>
+              </indent>
+            </format>
+          </formats>
+          <java>
+            <includes>
+              <include>src/test/java/spoon/testing/assertions/**/*.java</include>
+            </includes>
+            <palantirJavaFormat>
+              <version>2.39.0</version>                     <!-- optional -->
+              <style>PALANTIR</style>                       <!-- or AOSP/GOOGLE (optional) -->
+            </palantirJavaFormat>
+          </java>
+        </configuration>
+      </plugin>
     </plugins>
     <resources>
       <resource>
