Update spotless and palantirJavaFormat versions, add Javadoc formatting
The spotless-maven-plugin version has been upgraded from 2.41.1 to 2.43.0, and the palantirJavaFormat version has been boosted from 2.39.0 to 2.40.0. Also, Javadoc formatting has been enabled on palantirJavaFormat and the command for running codegen checks in the tests workflow file has been adjusted.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -168,4 +168,4 @@ jobs:
       - name: Time nix setup
         run: nix develop ${{ env.NIX_OPTIONS }} --command true
       - name: Run codegen checks
-        run: nix develop ${{ env.NIX_OPTIONS }} --keep PR_NUMBER --keep GITHUB_TOKEN --command codegen
+        run: nix develop ${{ env.NIX_OPTIONS }}  --command codegen
