--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
-        <version>2.41.1</version>
+        <version>2.43.0</version>
         <configuration>
           <formats>
             <format>
@@ -257,8 +257,9 @@
               <include>src/test/java/spoon/testing/assertions/**/*.java</include>
             </includes>
             <palantirJavaFormat>
-              <version>2.39.0</version>                     <!-- optional -->
-              <style>PALANTIR</style>                       <!-- or AOSP/GOOGLE (optional) -->
+              <version>2.40.0</version>
+              <style>PALANTIR</style>
+              <formatJavadoc>true</formatJavadoc>
             </palantirJavaFormat>
           </java>
         </configuration>
