--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -120,7 +120,7 @@ jobs:
       - name: Time nix setup
         run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command true
       - name: Run Javadoc quality check
-        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command javadoc-quality
+        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command ci-javadoc-quality
 
   reproducible-builds:
     runs-on: ubuntu-latest
