chore: Disable depclean
It is broken for java 21 classfiles since quite a while.
See https://github.com/ASSERT-KTH/depclean/issues/272

--- a/spoon-pom/pom.xml
+++ b/spoon-pom/pom.xml
@@ -207,6 +207,7 @@
                             <configuration>
                                 <!-- the build should fail if there are unused direct dependencies -->
                                 <failIfUnusedDirect>true</failIfUnusedDirect>
+                                <skipDepClean>true</skipDepClean>
                             </configuration>
                         </execution>
                     </executions>
